# cpp-lib-template

./: CMakeLists.txt  README.md
include/: lib.hpp
src/: example.cpp  lib.cpp
